--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-	"manifest_version": 2,
-	"name": "Minimal New Tab",
-	"version": "1.4",
+	"manifest_version": 1,
+	"name": "Tidle-New-Tab",
+	"version": "1.0",
 	"description": "newtab",
 	"chrome_url_overrides" : {
 		"newtab": "index.html"
